# stellar-health-aid

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
contracts/healh-aid-wallet/: Cargo.toml
contracts/healh-aid-wallet/src/: contract.rs  integration_test.rs  lib.rs  test.rs
contracts/health-aid-wallet/: Cargo.toml
contracts/health-aid-wallet/src/: contract.rs  lib.rs  test.rs
contracts/health-aid-wallet/test_snapshots/test/: test_constructor.1.json  test_deposit_defindex_failure.1.json  test_deposit_invalid_amount_zero.1.json  test_deposit_unauthorized.1.json  test_pay_unauthorized.1.json
contracts/provider-registry/: Cargo.toml
contracts/provider-registry/src/: contract.rs  lib.rs  test.rs
contracts/provider_registry/: Cargo.toml
contracts/provider_registry/src/: contract.rs  test.rs
contracts/provider_registry/test_snapshots/test/: test_add_provider.1.json  test_add_provider_already_exists.1.json  test_constructor.1.json  test_is_admin.1.json  test_is_provider_false_for_non_provider.1.json  test_multiple_providers.1.json  test_provider_management_workflow.1.json  test_remove_provider.1.json  test_remove_provider_not_found.1.json
prisma/: schema.prisma
prisma/migrations/20250916031507_init/: migration.sql
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/components/: back-page.tsx  payment-success.tsx
src/context/: AuthProvider.tsx  DonationQueueProvider.tsx  WalletProvider.tsx  sync-provider.tsx
src/contracts/: util.ts
src/data/: community.ts
src/hooks/: useAuth.ts  useConvertUsdToBrl.ts  useDonationQueue.ts  useWallet.ts  useWalletOnboarding.ts
src/lib/: auth.ts  crypto.ts  reflector.ts  stellar.ts  utils.ts
src/libs/: blend.ts  crossmint.ts  passkey.ts  stellar.ts
src/types/: donation.ts  index.ts  merchant.ts  user.ts  wallet.ts
src/util/: friendbot-url.ts  friendbot.ts  generate-random-salt.ts  initialize-with-friendbot.ts  load-wasm.ts  rcp.ts  send-transaction-fn.ts  smart-wallet-setup.ts  stellar-network.ts  wallet.ts
(+118 files in other folders)
